--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+GooglePlacesKey.cs
+GoogleMapsKey.cs
+CampgroundDetailsKey.cs
+CampgroundSearchAPIKey.cs
+CampsiteSearchKey.cs
